2003-12-03 Seth Woolley <seth@tautology.org>
	* Spell added