@@ -4,6 +4,7 @@
 [[ $CROSS_INSTALL == on ]] && OPTS="$OPTS --host=${HOST} --build=${BUILD}"
   
   ./configure --prefix=${INSTALL_ROOT}/usr  \
+         --exec-prefix=${INSTALL_ROOT}/usr  \
           --sysconfdir=${INSTALL_ROOT}/etc  \
        --localstatedir=${INSTALL_ROOT}/var  \
                        $OPTS                 &&
