@@ -1,2 +1,5 @@
 2003-12-03 Seth Woolley <seth@tautology.org>
+	* installs to /usr/sbin now instead of /usr/local/sbin
+	* src-Makefile.patch fixed
+	* BUILD: --exec-prefix added
 	* Spell added
